--- a/css/layout.css
+++ b/css/layout.css
@@ -1,3 +1,18 @@
+html,
+body {
+  height: 100%;
+}
+
+.app {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.app__main {
+  flex: 1;
+}
+
 .app__header,
 .app__footer {
   background: var(--header);
